# desktop-pet

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  pet.html  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/default-avatar/: manifest.json
src-tauri/src/: lib.rs  main.rs
src/components/: ContextMenu.tsx
src/core/: avatar-store.ts  image-gen.ts  sprite-slicer.ts  types.ts
src/pages/: AvatarManager.tsx  Onboarding.tsx  Settings.tsx
src/pet-window/: PetWindow.tsx  main.tsx  state-machine.ts
src/utils/: check-update.ts  config-store.ts  image-process.ts  toast.ts
